# daily-operating-system

./: .claude  .eslint-baseline.json  .gitignore  .stylelint-baseline.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LINTING.md  README.md  STARTING-HERE.md  TODOS.md  advanced-start.py  dailyos  easy-start.command  eslint.config.js  index.html  node_modules  notification-demo.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  setup.py  stylelint.config.js  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/abilities-macro/: Cargo.toml  build.rs
src-tauri/abilities-macro/src/: lib.rs  scoring.rs
src-tauri/abilities-macro/tests/: scoring_tests.rs  trybuild_runner.rs
src-tauri/abilities-runtime/: Cargo.toml
src-tauri/abilities-runtime/src/: inventory.rs  lib.rs  sensitivity.rs  structured_claim.rs  types.rs
src-tauri/abilities-runtime/tests/: block_kit_integration_harness.rs  boundary_compile_fail.rs  chrome_service_integration_fixture.rs  dos570_fallback_projection.rs  lint_compile_fail.rs  temporal_trybuild.rs  temporal_vocabulary.rs
src-tauri/benches/: suite_p_baseline.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: baseline_entity_linking.rs
src-tauri/icons/: icon.icns
src-tauri/presets/: affiliates-partnerships.json  affiliates.json  agency.json  consulting.json  core.json  customer-success.json  leadership.json  marketing.json  partnerships.json  product-marketing.json  product.json  sales.json  the-desk.json
src-tauri/prompts/templates/: prepare_meeting_prep.v1.txt
src-tauri/resources/: sample-meeting-notes.md
src-tauri/resources/models/: snowflake-arctic-embed-s-int8.onnx
src-tauri/scripts/: ability_surface_allowlist.txt  audit_suppression_tombstones.sh  build-mcp.sh  check_ability_surface_drift.sh  check_claim_immutability_allowlist.sh  check_claim_writer_allowlist.sh  check_dos301_legacy_projection_writers.sh  check_fixture_anonymization.sh  check_intelligence_claims_no_delete.sh  check_legacy_dismissal_shadow_write_pairing.sh  check_legacy_unattributed_writer_allowlist.sh  check_no_db_state_imports_in_abilities.sh  check_no_direct_clock_rng_in_abilities.sh  check_no_let_underscore_in_writer_paths.sh  check_no_live_external_clients_in_eval.sh  check_ownership_validator_coverage.sh  check_render_policy_coverage.sh  check_stakeholder_writer_emits_signal.sh  check_trust_factor_thresholds.sh  dos276_backfill_commitment_claim_identity.sql  dos7-migration-walkthrough.sh  remediate_suppression_tombstones.sh
src-tauri/src/: accounts.rs  action_status.rs  activity.rs  audit.rs  audit_log.rs  backfill_meetings.rs  calendar_merge.rs  capture.rs  commands.rs  connectivity.rs  db.rs  db_backup.rs  db_service.rs  demo.rs  doctor.rs  embeddings.rs  enrichment.rs  entity.rs  entity_intel.rs  entity_io.rs  error.rs  executor.rs  export.rs  focus_capacity.rs  focus_prioritization.rs  google.rs  helpers.rs  hygiene.rs  intel_queue.rs  intelligence.rs  intelligence_lifecycle.rs  json_loader.rs  latency.rs  lib.rs  main.rs  meeting_prep_queue.rs  migrations.rs  notification.rs  parser.rs  people.rs  (+12 more)
src-tauri/src/abilities/: claims.rs  feedback.rs  get_entity_context.rs  mod.rs  registry.rs  threads.rs  tracer.rs
src-tauri/src/bridges/: correction_payload.rs  eval.rs  mcp.rs  mod.rs  surface_client.rs  tauri.rs  types.rs  worker.rs
src-tauri/src/clay/: client.rs  enricher.rs  mod.rs  oauth.rs  poller.rs  signals.rs
src-tauri/src/commands/: abilities.rs  accounts_content_chat.rs  actions_calendar.rs  app_support.rs  briefing.rs  core.rs  integrations.rs  people_entities.rs  planning_reports.rs  projects_data.rs  sensitivity.rs  success_plans.rs  surface_runtime.rs  telemetry.rs  version_dispatcher.rs  workspace.rs
src-tauri/src/context_provider/: cache.rs  glean.rs  local.rs  mod.rs
src-tauri/src/db/: accounts.rs  actions.rs  claim_invalidation.rs  claims.rs  content.rs  core.rs  data_lifecycle.rs  emails.rs  encryption.rs  entities.rs  entity_linking.rs  feedback.rs  hardening.rs  intelligence_feedback.rs  invalidation_jobs.rs  key_provider.rs  meetings.rs  mod.rs  mod_tests.rs  people.rs  person_relationships.rs  pipeline.rs  projects.rs  search.rs  signals.rs  success_plans.rs  types.rs
src-tauri/src/devtools/: mod.rs
src-tauri/src/glean/: mod.rs  oauth.rs  token_store.rs
src-tauri/src/google_api/: auth.rs  calendar.rs  classify.rs  gmail.rs  mod.rs  token_store.rs
src-tauri/tests/: bundle14_stale_current_contradiction_substrate_test.rs  bundle15_cross_surface_consistency_substrate_test.rs  bundle16_ambiguous_identity_substrate_test.rs  bundle17_source_lifecycle_actor_provenance_substrate_test.rs  bundle18_sync_refresh_concurrency_substrate_test.rs  bundle2_provider_hallucination_substrate_test.rs  bundle3_stale_source_resurrection_substrate_test.rs  bundle4_cross_entity_person_ambiguity_substrate_test.rs  bundle6_corroboration_spam_substrate_test.rs  bundle6_pre_weighted_source_reliability_substrate_test.rs  bundle7_temporal_scope_violation_substrate_test.rs  bundle8_sensitivity_class_leak_substrate_test.rs  dos209_mutation_catalog.txt  dos209_regression.rs  dos210_amendment_a_test.rs  dos210_erased_invocation_async_test.rs  dos210_erased_invocation_envelope_test.rs  dos210_experimental_feature_gate_test.rs  dos210_macro_descriptor_completeness_test.rs  dos210_metadata_drift_test.rs  dos210_observability_span_fields_test.rs  dos211_composition_wire_format_test.rs  dos211_envelope_constructor_gate_test.rs  dos211_finalize_unattributed_field_fails_test.rs  dos211_llm_synthesis_trust_test.rs  dos211_thread_ids_test.rs  dos213_prompt_registry_lint_test.rs  dos215_temporal_primitives_test.rs  dos216_fixture_anonymization_lint_test.rs  dos216_hermetic_feature_test.rs  dos217_surface_drift_lint_test.rs  dos234_key_provider_boundary_test.rs  dos235_signal_policy_registry_lint_test.rs  dos237_load_test.rs  dos259_appstate_bridge_test.rs  dos259_glean_parity_test.rs  dos259_lint_wiring_test.rs  dos259_provider_selection_test.rs  dos259_pty_parity_test.rs  dos259_pty_seam_test.rs  (+73 more)
(+4471 files in other folders)
