[package]
name = "dailyos"
version = "0.13.0"
default-run = "dailyos"
description = "Operational intelligence for your workday. Open the app, your day is ready."
authors = ["DailyOS"]
edition = "2021"
autobins = false

[lib]
name = "dailyos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Phase 1C: Scheduler + Executor
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "process", "rt", "fs", "macros", "rt-multi-thread"] }
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
notify = { version = "7", features = ["macos_fsevent"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"

# Sprint 8: Native Google API (ADR-0049)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
open = "5"
base64 = "0.22"

# Document text extraction (ADR-0050)
pdf-extract = "0.10"
quick-xml = "0.37"
zip = "2"
calamine = "0.33"
html2text = "0.16"
rtf-parser = "0.4"

# Semantic embeddings (ADR-0074): nomic-embed-text-v1.5 via fastembed
fastembed = "5"

# libc: fd-level stdout suppression during embedding model init (avoids MCP stream corruption)
libc = "0.2"

# I307: Correction Learning — Thompson Sampling + fuzzy matching
rand = "0.10"
rand_distr = "0.6"
strsim = "0.11"

# MCP Server (ADR-0075) + Quill MCP client
rmcp = { version = "0.1", features = ["server", "client", "transport-io", "transport-child-process", "macros"] }
schemars = { version = "0.8", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
filetime = "0.2.27"
tempfile = "3"

[features]
mcp = ["dep:schemars", "dep:anyhow"]

[[bin]]
name = "dailyos"
path = "src/main.rs"

[[bin]]
name = "dailyos-mcp"
path = "src/mcp/main.rs"
required-features = ["mcp"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
