[workspace]
members = [".", "abilities-macro"]
resolver = "2"

[package]
name = "dailyos"
version = "1.2.1"
default-run = "dailyos"
description = "Operational intelligence for your workday. Open the app, your day is ready."
authors = ["DailyOS"]
edition = "2021"
autobins = false

[lib]
name = "dailyos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Phase 1C: Scheduler + Executor
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "process", "rt", "fs", "macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "backup"] }
tokio-rusqlite = "0.5"
notify = { version = "7", features = ["macos_fsevent"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"

# Sprint 8: Native Google API (ADR-0049)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false }
url = "2"
open = "5"
base64 = "0.22"

# Document text extraction (ADR-0050)
pdf-extract = "0.10"
quick-xml = "0.37"
zip = "2"
calamine = "0.33"
html2text = "0.16"
rtf-parser = "0.4"

# Semantic embeddings (ADR-0074): nomic-embed-text-v1.5 via fastembed
fastembed = "5"

# libc: fd-level stdout suppression during embedding model init (avoids MCP stream corruption)
libc = "0.2"

# I307: Correction Learning — Thompson Sampling + fuzzy matching
rand = "0.10"
rand_distr = "0.6"
strsim = "0.11"

# DOS-259 (W2-B): IntelligenceProvider trait — async fn in dyn-compatible trait
async-trait = "0.1"

# ADR-0095: Glean context provider cache (concurrent hash map)
dashmap = "6"

# Non-poisoning Mutex/RwLock — prevents cascade crashes when a task panics while holding a lock
parking_lot = { version = "0.12", features = ["arc_lock"] }
tempfile = "3"

# MCP Server (ADR-0075) + Quill MCP client
rmcp = { version = "0.1", features = ["server", "client", "transport-io", "transport-child-process", "macros"] }
schemars = "0.8.22"
inventory = "0.3"
dailyos-abilities-macro = { path = "abilities-macro" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = { version = "1", optional = true }

[dev-dependencies]
filetime = "0.2.27"
tracing-test = "0.2"
trybuild = "1"

[features]
mcp = ["dep:anyhow"]

[[bin]]
name = "dailyos"
path = "src/main.rs"

[[bin]]
name = "dailyos-mcp"
path = "src/mcp/main.rs"
required-features = ["mcp"]

# DOS-311: post-migration reconcile + repair binary. Reads
# scripts/reconcile_ghost_resurrection.sql and runs it against the
# workspace DB. Skeleton form: detects whether intelligence_claims
# (DOS-7 / W3) exists and either runs the reconcile (if yes) or
# logs a no-op (if not). Per-finding repair logic that calls
# services::claims::commit_claim lands when DOS-7 ships that module.
[[bin]]
name = "reconcile_post_migration"
path = "src/bin/reconcile_post_migration.rs"

[[bin]]
name = "repair_entity_linking"
path = "src/bin/repair_entity_linking.rs"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-local-authentication = { version = "0.3", features = ["block2"] }
block2 = "0.6"

[profile.release]
panic = "unwind"    # was "abort" — enables task supervisor to catch/restart panicking tasks
codegen-units = 1
lto = true
opt-level = "s"
strip = true
