[package]
name = "dailyos-abilities-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8.22"
inventory = "0.3"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt", "time", "macros"] }

[build-dependencies]
# build.rs reads dos209_mutation_catalog.txt and emits a generated allowlist
